# CV

./: .gitignore  _config.yml  build.sh  default.nix  index.html  pandoc.css  style.css
.github/workflows/: accessibility.yaml  contact-service.yml  jekyll-gh-pages.yml
_data/: baseData.yml  career.yml  contact.yaml  references.yaml  skills.yml
_includes/: aboutme.html  career.html  contact.html  contactLoader.html  education.html  languages.html  skills.html  title.html
_layouts/: default.html  resume.html
_layouts/_site/: resume.html
_site/: default.nix  index.html  pandoc.css  style.css
address_service/: .dev.vars  Cargo.toml  Makefile  README.md  package-lock.json  package.json  wrangler.toml
address_service/integration/: test_integration.js  util.js
address_service/src/: auth_repository.rs  auth_service.rs  claims.rs  contact_details.rs  lib.rs  secrets.rs  user.rs  validator.rs
assets/css/: print.css  print.scss  style.css  style.scss
assets/js/: contactDetails.js  index.js
contact-service/: Dockerfile  build.gradle.kts  settings.gradle.kts
contact-service/src/main/kotlin/de/rlang/: Application.kt
contact-service/src/main/kotlin/de/rlang/access/: AccessModule.kt
contact-service/src/main/kotlin/de/rlang/plugins/: Routing.kt  (+2 more)
contact-service/src/main/resources/: application.conf
contact-service/src/main/resources/templates/mustache/: accessGranted.hbs  contactDetails.hbs  generateToken.hbs  login.hbs
contact-service/src/test/resources/: application-test.conf  contactDetails.yml
css/: bootstrap.min.css
scripts/: get_deployment_url.js
(+22 files in other folders)
