[package]
name = "address_service"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
worker = "0.0.15"
serde = {version = "1.0", features = ["derive"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
